--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "mqtt"
   ],
   "dependencies": {
-    "mosca": "^2.8.3",
+    "mosca": "^2.8.3"
   },
   "devDependencies": {
     "autod": "^3.0.1",
